# esift

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DATADOG-PLAN.md  DATADOG.md  README.md  ROADMAP-v2.md  ROADMAP.md
.github/workflows/: ci.yml
config/: example.toml
crates/esift-cli/: Cargo.toml
crates/esift-cli/src/: main.rs  metrics.rs  metrics_server.rs  secret.rs
crates/esift-core/: Cargo.toml
crates/esift-core/src/: checkpoint.rs  config.rs  error.rs  lib.rs  transform.rs
crates/esift-core/src/dest/: file.rs  mod.rs  openobserve.rs  s3.rs  stdout.rs
crates/esift-core/src/dest/openobserve/: auth.rs  build.rs  config.rs  deadletter.rs  metrics.rs  mod.rs  pipeline.rs  response.rs  routing.rs  timestamp.rs  tls.rs  transport.rs  types.rs
crates/esift-core/src/http/: mod.rs  retry.rs
crates/esift-core/src/source/: file.rs  mod.rs  opensearch.rs
crates/esift-core/src/source/datadog/: api.rs  archive.rs  decompress.rs  flatten_api.rs  flatten_archive.rs  mod.rs  site.rs
crates/esift-core/tests/: datadog_api_e2e.rs  datadog_archive_e2e.rs  oo_auth.rs  oo_batch_bytes.rs  oo_gzip.rs  oo_partial_failure.rs  oo_slices.rs  oo_slices_resume.rs  openobserve_bulk.rs  opensearch_pagination.rs
crates/esift-transform/: Cargo.toml
crates/esift-transform/src/: mapping.rs
docker/: docker-compose.yml  localstack.yml
