[workspace]
members = [
    "crates/esift-cli",
    "crates/esift-core",
    "crates/esift-transform",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
bytes = "1"
futures = "0.3"
indicatif = "0.17"
esift-core = { path = "crates/esift-core" }
esift-transform = { path = "crates/esift-transform" }
