[package]
name = "esift"
description = "Extract and re-ingest data from Elasticsearch-compatible sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "esift"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
indicatif.workspace = true
esift-core.workspace = true
esift-transform.workspace = true
