[package]
name = "esift"
description = "Extract and re-ingest data from Elasticsearch-compatible sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "esift"
path = "src/main.rs"

[features]
aws = [
    "esift-core/aws",
    "dep:aws-config",
    "dep:aws-credential-types",
]

[dependencies]
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
toml.workspace = true
indicatif.workspace = true
esift-core.workspace = true
esift-transform.workspace = true

aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
