[package]
name = "esift-core"
description = "Core extraction, source, and destination logic for esift"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
    "dep:http",
]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
flate2 = "1"

aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
], optional = true }
http = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
wiremock = "0.6"
tempfile = "3"
