[package]
name = "esift-core"
description = "Core extraction, source, and destination logic for esift"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
    "dep:http",
]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
# Datadog archive source (Path 1): S3 object listing/download + zstd decode.
datadog-s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:zstd"]
# Datadog Logs Search API source (Path 2): no extra deps (reqwest already present).
datadog-api = []

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
flate2 = "1"

aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
], optional = true }
http = { workspace = true, optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
wiremock = "0.6"
tempfile = "3"
