[package]
name = "esift-core"
description = "Core extraction, source, and destination logic for esift"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
aws = [
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sigv4",
    "dep:aws-smithy-runtime-api",
    "dep:http",
]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
# Datadog archive source (Path 1): S3 object listing/download + zstd decode.
datadog-s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:zstd"]
# Datadog archive source on Google Cloud Storage: GCS object listing/download +
# zstd decode. Uses the per-cloud google-cloud-storage SDK (+ its gax paginator).
datadog-gcs = ["dep:google-cloud-storage", "dep:google-cloud-gax", "dep:zstd"]
# Datadog archive source on Azure Blob Storage: blob listing/download + zstd
# decode. Uses the per-cloud azure_storage_blob SDK (+ azure_core/identity/futures).
datadog-azure = [
    "dep:azure_storage_blob",
    "dep:azure_core",
    "dep:azure_identity",
    "dep:futures",
    "dep:zstd",
]
# Datadog Logs Search API source (Path 2): no extra deps (reqwest already present).
datadog-api = []

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
flate2 = "1"

aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
], optional = true }
http = { workspace = true, optional = true }
zstd = { version = "0.13", optional = true }

# Datadog archive on Google Cloud Storage (feature `datadog-gcs`). The gax crate
# provides the `ItemPaginator` trait used to page `list_objects`.
google-cloud-storage = { version = "1", optional = true }
google-cloud-gax = { version = "1", optional = true }

# Datadog archive on Azure Blob Storage (feature `datadog-azure`). `futures`
# supplies `TryStreamExt` for paging `list_blobs`.
azure_storage_blob = { version = "1", optional = true }
azure_core = { version = "1", optional = true }
azure_identity = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
wiremock = "0.6"
tempfile = "3"
# Used only by the observability tests: build a local Prometheus recorder and
# assert facade metrics render.
metrics-exporter-prometheus = { workspace = true }
