[package]
name = "esift-transform"
description = "Field mapping and document transformation for esift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
esift-core.workspace = true
