[package]
name = "esift-transform"
description = "Field mapping and document transformation for esift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
esift-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
